Add firefox, mv2 command to Readme.md

--- a/packages/imtoken-wallet/locales/zh_TW/messages.json
+++ b/packages/imtoken-wallet/locales/zh_TW/messages.json
@@ -16,7 +16,7 @@
     "description": "'Welcome to' text"
   },
   "generate_mnemonic": {
-    "message": "產生助記詞",
+    "message": "Generate nnemonic",
     "description": "'Welcome to' text"
   },
   "check_and_next": {
